Hide blocks with not ready content

--- a/wp-content/themes/expert-massage/views/includes/modules/content/famous-clients.pug
+++ b/wp-content/themes/expert-massage/views/includes/modules/content/famous-clients.pug
@@ -149,7 +149,7 @@
   ]
 
 //- TODO To enable this block remove hidden class
-section.famous-clients
+section.famous-clients.hidden
   .famous-clients__content.container
     h2.famous-clients__title.heading Нам доверяют
     .slider
