--- a/wp-content/themes/expert-massage/views/pages/figure-modeling.pug
+++ b/wp-content/themes/expert-massage/views/pages/figure-modeling.pug
@@ -31,7 +31,7 @@ block variables
         title: 'Какой будет результат?',
         text: [
           'Уйдут объёмы и лишний вес, фигура заметно преобразится. Вы похудеете, результаты будут заметны и на весах, и по одежде, и по качеству тела.',
-          'Кожа подтянется, контуры станут изящнее, проблемные зоны заметно сгладятся. При этом в отличие от быстрых диет, такое похудение не затронет грудь и не отразится нега- тивно на лице. Ваша фигура станет стройнее, гармоничнее, и вы сможете носить одежду на пару размеров меньше.',
+          'Кожа подтянется, контуры станут изящнее, проблемные зоны заметно сгладятся. При этом в отличие от быстрых диет, такое похудение не затронет грудь и не отразится нега&shy;тивно на лице. Ваша фигура станет стройнее, гармоничнее, и вы сможете носить одежду на пару размеров меньше.',
           'Также благодаря массажу ускорится ваш обмен веществ, и вы продолжите стройнеть даже после курса.'
         ]
       },
@@ -39,14 +39,14 @@ block variables
         title: 'Насколько я похудею?',
         text: [
           'Конечно, это зависит от ваших исходных данных, но точно очень заметно. И для вас, и для окружающих. Вы сможете носить одежду, которая сейчас вам мала, все вещи будут сидеть гораздо лучше, так как вы похудеете именно в проблемных зонах.',
-          'Лучшие результаты у тех клиентов, кто соблюдает рекомендации — во время процедуры специалист расскажет методику нашей клиники. Но и без изменения образа жизни результат впечатлит — заметно уйдёт и лишний вес, и объёмы.',
+          'Лучшие результаты у тех клиентов, кто соблюдает рекомендации&nbsp;— во время процедуры специалист расскажет методику нашей клиники. Но и без изменения образа жизни результат впечатлит&nbsp;— заметно уйдёт и лишний вес, и объёмы.',
           'Некоторые из наших клиенток за курс массажа сбрасывают до 18 килограмм и полностью меняют гардероб.'
         ]
       },
       {
         title: 'Как проходит процедура? Какие будут ощущения?',
         text: [
-          'Процедура состоит из трёх этапов — разгона лимфы, антицеллюлит&shy;ного массажа и обёртывания. Мы делаем обёртывание на все проблемные зоны: руки, бёдра, живот, ягодицы.',
+          'Процедура состоит из трёх этапов&nbsp;— разгона лимфы, антицеллюлит&shy;ного массажа и обёртывания. Мы делаем обёртывание на все проблемные зоны: руки, бёдра, живот, ягодицы.',
           'Первая часть массажа расслабляющая и приятная, вторая может быть слегка чувствительной из-за глубокого воздействия. Мастер очень тщательно и глубоко проработает ваши ткани, разомнёт жировые отложения, выведет лишнюю межклеточную жидкость. Синяки бывают очень редко, только если у вас слабые сосуды. Даже если они появятся, то будут очень маленькие и пройдут быстро.'
         ]
       }
@@ -70,7 +70,7 @@ block variables
           title: 'Вы похудеете и&nbsp;это будет заметно всем окружающим',
           text: `За&nbsp;курс уходит и&nbsp;жир, и&nbsp;отёки, и&nbsp;лишняя межклеточная жидкость. Вы увидите минус
             на&nbsp;весах и&nbsp;в&nbsp;объёмах, ваше похудение заметят близкие и&nbsp;коллеги. Если вы будете
-            соблюдать несложные рекомендации ваше преображение всего за&nbsp;месяц курса будет ещё более невероятным`
+            соблюдать несложные рекомендации, ваше преображение всего за&nbsp;месяц курса будет ещё более невероятным`
         },
         {
           title: 'Ваша фигура станет более изящной, подтянутой, точёной',
