--- a/wp-content/themes/expert-massage/views/includes/modules/head/head.pug
+++ b/wp-content/themes/expert-massage/views/includes/modules/head/head.pug
@@ -4,7 +4,8 @@ meta(name='description' content=pageData.description)
 meta(name='keywords' content=pageData.keywords)
 meta(name='viewport' content='width=device-width')
 meta(http-equiv='X-UA-Compatible' content='IE=edge')
-meta(name='yandex-verification' content='8085584c20aa6a13')
+meta(name='yandex-verification' content='8ae7ffb70640f4dc')
+meta(name="google-site-verification" content="x9ZV3UVw6TPASq8n10MmGrFbecZMusakwxuXKGYeyw4")
 link(rel='manifest' href=`${THEME_DIST_PATH}/site.webmanifest`)
 include favicons
 if globalData.canonical
@@ -15,3 +16,4 @@ meta(property='og:description' content=pageData.description)
 if pageData.hasMap
   script(src='https://api-maps.yandex.ru/2.1/?apikey=b176543a-340b-4de9-9ded-9037e167250b&lang=ru_RU')
 - wp_head()
+include analytics-scripts
