--- a/wp-content/themes/expert-massage/views/pages/contacts.pug
+++ b/wp-content/themes/expert-massage/views/pages/contacts.pug
@@ -3,7 +3,7 @@ extends ../layouts/default
 block variables
   -
     pageData = {
-      description: `Массаж в центре Москвы, метро Цветной бульвар, 1-й Волконский переулок, 15 (5 минут ходьбы от станции метро)`,
+      description: `Массаж в центре Москвы, рядом с метро Цветной бульвар, адрес: 1-й Волконский переулок, 15 (5 минут ходьбы от станции метро)`,
       keywords: `массаж, центр, Москва, контакты, адрес, телефон, метро`,
       pageClass: 'contact-info service-page',
       theme: 'main',
