--- a/wp-content/themes/expert-massage/views/utils/global-data.pug
+++ b/wp-content/themes/expert-massage/views/utils/global-data.pug
@@ -13,7 +13,7 @@
   }
 
   globalData.company.specialists[0].tags = [
-    `${date('Y') - 2008} лет опыта`,
+    `${(date('Y') - 2008)} лет опыта`,
     'Ведущий специалист'
   ]
   globalData.company.specialists[0].description = [
@@ -47,7 +47,7 @@
     }
   }
   globalData.company.specialists[1].tags = [
-    `${date('Y') - 2010} лет опыта`,
+    `${(date('Y') - 2010)} лет опыта`,
     'Член Международного Альянса Массажистов'
   ]
   globalData.company.specialists[1].description = [
@@ -80,7 +80,7 @@
     }
   }
   globalData.company.specialists[2].tags = [
-    `${date('Y') - 2000} год стажа`,
+    `${(date('Y') - 2000)} год стажа`,
     `Медицинский подход<span class='hidden_mobile'> к массажу</span>`
   ]
   globalData.company.specialists[2].description = [
@@ -113,7 +113,7 @@
     }
   }
   globalData.company.specialists[3].tags = [
-    `${date('Y') - 2011} лет опыта`,
+    `${(date('Y') - 2011)} лет опыта`,
     'Массаж — и работа, и хобби'
   ]
   globalData.company.specialists[3].description = [
