--- a/wp-content/themes/expert-massage/src/assets/scss/blocks/massage-types/massage-card.scss
+++ b/wp-content/themes/expert-massage/src/assets/scss/blocks/massage-types/massage-card.scss
@@ -1,6 +1,8 @@
 @use '../../tools' as *;
 
 .massage-card {
+  position: relative;
+
   padding: 2rem 1.5rem;
 
   background-color: $lightgray-color;
