--- a/wp-content/themes/expert-massage/views/includes/admin/main.pug
+++ b/wp-content/themes/expert-massage/views/includes/admin/main.pug
@@ -12,3 +12,5 @@
       a(href=`${get_admin_url()}admin.php?page=review_form`) Отзывы
     li
       a(href=`${get_admin_url()}admin.php?page=prices`) Прайс-лист
+    li
+      a(href=`${get_admin_url()}admin.php?page=company_info`) Информация о компании
