--- a/wp-content/themes/expert-massage/views/pages/reviews.pug
+++ b/wp-content/themes/expert-massage/views/pages/reviews.pug
@@ -57,7 +57,7 @@ block content
             textarea.review-form__review#reviewText(name='review' placeholder='Текст отзыва')
             p.message.hidden
           button.button_primary.review-form__submit(type='button') Отправить
-          p.message.message_success.hidden
+          p.review-form__main-message.message.hidden
     section.reviews-page__reviews.reviews
       h2.reviews-page__subtitle Отзывы наших клиентов
       nav.reviews-filters
