--- a/wp-content/themes/expert-massage/views/includes/modules/footer/map-block.pug
+++ b/wp-content/themes/expert-massage/views/includes/modules/footer/map-block.pug
@@ -7,7 +7,7 @@ section.map-block
         picture
           source(srcset=`${THEME_IMG_PATH}/map/static-map_desktop.jpg` media='(min-width: 768px)')
           source(srcset=`${THEME_IMG_PATH}/map/static-map_mobile.jpg`)
-          img(src=`${THEME_IMG_PATH}/map/static-map_desktop.jpg` alt='' height='420')
+          img(src=`${THEME_IMG_PATH}/map/static-map_desktop.jpg` alt=globalData.company.address.replace('<br>', ', ') height='420')
       .map-block__info
         p.map-block__text!= globalData.company.address
         p.map-block__text!=globalData.company.workingHours
