--- a/wp-content/themes/expert-massage/src/admin/scss/admin.scss
+++ b/wp-content/themes/expert-massage/src/admin/scss/admin.scss
@@ -351,6 +351,38 @@
   }
 }
 
+.video-card {
+  max-width: 800px;
+  margin-bottom: 25px;
+  padding: 30px 20px;
+
+  background-color: #ffffff;
+  border: 2px solid #333333;
+  border-radius: 5px;
+
+  &__title {
+    margin-top: 0;
+  }
+
+  &__row {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+
+  &__form {
+    font-size: 14px;
+  }
+
+  &__label {
+    margin-right: 20px;
+  }
+
+  &__poster-preview {
+    max-height: 300px;
+  }
+}
+
 @media (min-width: 1024px) {
   .table {
     &_massages,
