Fix small views problems

--- a/wp-content/themes/expert-massage/views/includes/modules/content/massage-results/face.pug
+++ b/wp-content/themes/expert-massage/views/includes/modules/content/massage-results/face.pug
@@ -21,7 +21,7 @@ each photo in additionalRestPhotos
     - slidesList.push(photo)
 
 mixin face-slide(slide)
-  .face-results__slide(class=(slide === 'main' ? 'face-results__slide_main' : `face-results__slide_${slide}`))
+  .face-results__slide(class=(slide === 'main' ? 'face-results__slide_main' : `face-results__slide_${slide.id}`))
     case slide
       when 'main'
         -
