--- a/wp-content/themes/expert-massage/views/pages/index.pug
+++ b/wp-content/themes/expert-massage/views/pages/index.pug
@@ -17,7 +17,7 @@ block variables
     pageData.featuresBlock = {
       heading: 'Почему нам доверяют',
       link: {
-        url: '/about/',
+        url: '/informatsiya/professionalnyj-massazh/',
         text: 'Больше о нас'
       },
       features: [
